samples/_failures_safe/1761535252_92683d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_887f2f12.c: In function ‘main’:
./samples/SAFE/__tmp_887f2f12.c:156:28: error: missing terminating " character
  156 |                     printf("Error: Cannot add
      |                            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_887f2f12.c:156:21: error: expected expression at end of input
  156 |                     printf("Error: Cannot add
      |                     ^~~~~~
./samples/SAFE/__tmp_887f2f12.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_887f2f12.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_887f2f12.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_887f2f12.c:156:21: error: expected declaration or statement at end of input
